package thi_thu.logger;

public enum LogLevel {
    INFO, WARNING, ERROR
}
